Atualização da header do site, para que a mesma se adapte de acordo com a rolagem do site

--- a/src/index.css
+++ b/src/index.css
@@ -22,44 +22,9 @@ body {
   overflow-x: hidden;
 }
 
-.light-mode {
-  background-color: var(--light-bg);
-  color: var(--light-text);
-}
-
-.dark-mode {
-  background-color: var(--dark-bg);
-  color: var(--dark-text);
-}
-
 a {
   text-decoration: none;
-  color: var(--primary-color);
-}
-
-.btn {
-  display: inline-block;
-  background-color: var(--primary-color);
-  color: white;
-  padding: 10px 20px;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.btn:hover {
-  background-color: var(--secondary-color);
-}
-
-.btn.secondary {
-  background-color: transparent;
-  border: 1px solid var(--primary-color);
-  color: var(--primary-color);
-}
-
-.btn.secondary:hover {
-  background-color: rgba(52, 152, 219, 0.1);
+  color: inherit;
 }
 
 /* Header styles */
@@ -73,8 +38,19 @@ header {
   align-self: flex-end;
   justify-content: flex-end;
   align-items: center;
-  padding: 50px;
+  padding: 20px;
   z-index: 100;
+}
+
+.scrolled-50px {
+  background-color: hsla(0, 0%, 9%, 0.9);
+  box-shadow: 5px 5px 0px hsla(0, 100%, 14%, 0.8);
+  text-shadow: 0 0 5px hsla(0, 0%, 9%, 0.7);
+}
+
+.scrolled-100vh {
+  background-color: hsla(0, 0%, 6%, 0.9);
+  box-shadow: 5px 5px 0px hsla(0, 100%, 14%, 0.8);
 }
 
 nav {
@@ -85,21 +61,41 @@ nav ul {
   width: 100%;
   display: flex;
   justify-content: space-around;
-  gap: 10px;
   list-style: none;
   gap: 30px;
+  padding: 20px 20px 10px 20px;
+  transition: background 0.3s, box-shadow 0.8s cubic-bezier(0.2, 1, 0.3, 1), opacity 0.3s ease-out;
+  border-radius: 5px;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 nav a {
-  color: white;
-  font-size: 20px
+  font-size: 20px;
+  transition: 0.4s;
 }
 
-nav button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  font-size: 20px;
+nav li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.aba-ativa {
+  color: white;
+}
+
+.point-header {
+  background-color: var(--strong-red);
+  width: 10px;
+  height: 10px;
+  border-radius: 50px;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.aba-ativa .point-header {
+  opacity: 1;
 }
 
 /* Section styles */
@@ -109,7 +105,6 @@ section {
 
 section h2 {
   text-align: center;
-  margin-bottom: 40px;
   font-size: 2.5rem;
 }
 
@@ -177,7 +172,7 @@ section h2 {
 }
 
 /* Projects section */
-.projects-section{
+.projects-section {
   background-color: var(--light-black);
   width: 100%;
   height: 80vh;
@@ -185,7 +180,8 @@ section h2 {
   justify-content: center;
   align-items: center;
 }
-.projects-assets{
+
+.projects-assets {
   width: 70%;
 }
 
@@ -199,7 +195,7 @@ section h2 {
 }
 
 .project-card {
-  background: #fff;
+  background-color: var(--more-light-black);
   border-radius: 10px;
   height: 100%;
   overflow: hidden;
@@ -207,16 +203,21 @@ section h2 {
   transition: transform 0.3s;
   text-align: center;
   padding: 20px;
+  color: white;
 }
 
 .project-card:hover {
   transform: translateY(-8px);
 }
 
+.project-card p {
+  color: rgba(255, 255, 255, 0.6);
+}
+
 .project-image img {
   width: 100%;
   height: 180px;
-  border-radius: 3px;
+  border-radius: 5px;
   object-fit: cover;
 }
 
@@ -361,7 +362,7 @@ h3 {
 }
 
 /* Contact section */
-.contact{
+.contact {
   background-color: var(--more-light-black);
   display: flex;
   justify-content: center;
@@ -377,7 +378,7 @@ h3 {
   width: 70%;
 }
 
-.contact-section{
+.contact-section {
   display: flex;
   justify-content: center;
   width: 100%;
@@ -396,24 +397,28 @@ h3 {
   margin-top: 30px;
   color: white;
 
-  & img{
+  & img {
     width: 26px;
   }
-  & .email-contact{
+
+  & .email-contact {
     text-decoration: underline;
     font-size: 24px;
     line-height: 1;
   }
-  & a{
+
+  & a {
     display: flex;
     align-items: center;
   }
 }
-.texto-contato{
+
+.texto-contato {
   font-size: 20px;
   width: 70%;
   color: hsla(0, 0%, 100%, 0.6);
 }
+
 /* Footer */
 footer {
   background-color: var(--default-black);
@@ -421,35 +426,6 @@ footer {
   padding: 30px;
   color: white;
   border-bottom: solid 10px var(--dark-red);
-}
-
-/* Responsive styles */
-@media (max-width: 768px) {
-
-  nav {
-    position: fixed;
-    top: 70px;
-    right: -100%;
-    width: 70%;
-    height: calc(100vh - 70px);
-    transition: right 0.3s;
-    padding: 20px;
-  }
-
-  nav.open {
-    right: 0;
-  }
-
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .about-content,
-  .contact-container {
-    flex-direction: column;
-  }
-
 }
 
 .profile-image img {
