--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Bungee+Shade&display=swap');
 
-/* Estilos básicos para o site */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 :root {
   --light-black: #181818;
   --strong-red: #FF0000;
@@ -14,6 +7,12 @@
   --dark-red: #480000;
   --more-light-black: #373737;
   --dark-text: #f8f9fa;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -27,13 +26,12 @@ a {
   color: inherit;
 }
 
-/* Header styles */
 header {
   position: fixed;
   top: 0;
   font-weight: 600;
   font-style: italic;
-  width: 50%;
+  width: 40%;
   display: flex;
   align-self: flex-end;
   justify-content: flex-end;
@@ -54,7 +52,7 @@ header {
 }
 
 nav {
-  width: 90%;
+  width: 100%;
 }
 
 nav ul {
@@ -98,7 +96,6 @@ nav li {
   opacity: 1;
 }
 
-/* Section styles */
 section {
   margin: 0 auto;
 }
@@ -108,13 +105,51 @@ section h2 {
   font-size: 2.5rem;
 }
 
-/**/
-.about-content {
+h3 {
+  padding: 15px;
+  font-size: 1.2em;
+}
+
+.subtitulo-maior {
+  font-size: 50px;
+  color: white;
+}
+
+.subtitulo-menor {
+  font-size: 30px;
+  margin: 0 !important;
+  color: hsla(0, 0%, 100%, 0.4);
+}
+
+.sobreMim {
+  background-color: var(--light-black);
+  background-image: url('public/images/fundoSobre.jpg');
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 100vh;
+  max-height: 100vh;
+  max-width: 100vw;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  overflow: hidden;
+}
+
+.textFundoSobreMim {
+  font-family: "Bungee Shade", sans-serif;
+  font-weight: 500;
+  position: absolute;
+  left: -130px;
+  bottom: 50px;
+  z-index: 0;
+  font-size: 400px;
+  line-height: 1;
+  opacity: 0.05;
+  color: var(--strong-red);
+  user-select: none;
 }
 
 .about-section {
@@ -124,45 +159,101 @@ section h2 {
   align-items: center;
 }
 
-.profile-image {
-  padding: 0;
-  flex: 1;
-  display: flex;
-  justify-content: flex-end;
-  max-height: 52vh;
-}
-
-.placeholder-image {
-  background-color: #ddd;
-  height: 300px;
+.about-content {
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.sobreFotoNome {
+  display: flex;
+  flex-direction: row-reverse;
+  flex: 1;
+  height: 70%;
+  clip-path: inset(0 0 0 0);
+  transition: clip-path 0.3s ease-in-out;
+}
+
+.sobreFotoNome-fechado {
+  display: flex;
+  flex-direction: row-reverse;
+  flex: 1;
+  height: 70%;
+  clip-path: inset(0 0 0 100%);
+  transition: clip-path 0.4s ease-in-out;
+}
+
+.profile-image {
+  align-self: flex-start;
+  padding: 0;
+}
+
+.profile-image img {
+  margin: 0;
+  width: 350px;
+  min-height: 350px;
+  overflow: visible;
+}
+
+.profile-nome {
+  align-self: flex-end;
+}
+
+.profile-nome p {
+  color: white;
+  font-size: 35px;
+  line-height: 1.2;
+}
+
+.profile-nome h1 {
+  color: var(--strong-red);
+  font-size: 66px;
+  font-weight: 800;
+  line-height: 1.2;
 }
 
 .bio {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   flex: 1;
-  font-family: "Archivo Narrow", sans-serif;
-  height: 70%;
-  border-left: white solid 3px;
-  padding-left: 30px;
-  gap: 20px;
   z-index: 1;
-
-
-  & .sobreTexto {
-    word-wrap: break-word;
-    font-size: 30px;
-    color: hsla(0, 0%, 100%, 0.8);
-  }
+  font-family: "Archivo Narrow", sans-serif;
 }
 
 .bio p {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+}
+
+.textoGaveta {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 70%;
+  border-left: white solid 3px;
+  padding-left: 30px;
+  gap: 10px;
+  max-width: 100%;
+  clip-path: inset(0 0 0 0);
+  transition: clip-path 0.3s ease-in-out;
+}
+
+.textoGaveta-fechada {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 30px;
+  gap: 10px;
+  overflow: hidden;
+  clip-path: inset(0 99% 0 0);
+  transition: clip-path 0.4s ease-in-out;
+  border-left: white solid 3px;
+  height: 70%;
+}
+
+.sobreTexto {
+  word-wrap: break-word;
+  font-size: 30px;
+  color: hsla(0, 0%, 100%, 0.8);
 }
 
 .call-to-action {
@@ -171,7 +262,14 @@ section h2 {
   margin-top: 30px;
 }
 
-/* Projects section */
+.skillsProjects {
+  background-color: var(--default-black);
+  font-family: "Archivo Narrow", sans-serif;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+}
+
 .projects-section {
   background-color: var(--light-black);
   width: 100%;
@@ -221,11 +319,6 @@ section h2 {
   object-fit: cover;
 }
 
-h3 {
-  padding: 15px;
-  font-size: 1.2em;
-}
-
 .principaisTec {
   display: flex;
   justify-content: center;
@@ -238,14 +331,6 @@ h3 {
   height: 35px;
 }
 
-/* Skills section */
-.skills-container {
-  display: flex;
-  width: 80%;
-  justify-content: space-between;
-  z-index: 1;
-}
-
 .skills-section {
   width: 80%;
   height: 100vh;
@@ -254,6 +339,13 @@ h3 {
   justify-content: space-around;
   align-items: center;
   position: relative;
+}
+
+.skills-container {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  z-index: 1;
 }
 
 .divHabilidades {
@@ -275,48 +367,47 @@ h3 {
   display: flex;
   justify-content: space-between;
   z-index: 1;
+}
 
+.divClasseHabilidades img {
+  width: 55px;
+}
 
-  & img {
-    width: 55px;
-  }
+.divClasseHabilidades .classeHabilidadeImage {
+  background-color: var(--dark-red);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+}
 
-  & .classeHabilidadeImage {
-    background-color: var(--dark-red);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
-  }
+.divClasseHabilidades .frontedLogo {
+  width: 53px;
+}
 
-  & .frontedLogo {
-    width: 53px;
-  }
+.divClasseHabilidades .fronted, .divClasseHabilidades .backend {
+  background-color: var(--more-light-black);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 40%;
+  padding: 10px 20px 40px 20px;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.7);
+  height: 100%;
+}
 
-  & .fronted, .backend {
-    background-color: var(--more-light-black);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 40%;
-    padding: 10px 20px 40px 20px;
-    font-weight: 600;
-    color: rgba(255, 255, 255, 0.7);
-    height: 100%;
-  }
+.divClasseHabilidades div {
+  text-align: center;
+}
 
-  & div {
-    text-align: center;
-  }
-
-  & h4 {
-    line-height: 1.4;
-    font-size: 30px;
-    color: white;
-  }
+.divClasseHabilidades h4 {
+  line-height: 1.4;
+  font-size: 30px;
+  color: white;
 }
 
 .divFundoSkills {
@@ -326,19 +417,6 @@ h3 {
   width: 100vw;
   height: 27vh;
   z-index: 0;
-}
-
-.textoFundoSkills {
-  font-family: "Bungee Shade", sans-serif;
-  position: absolute;
-  left: -300px;
-  top: 50px;
-  z-index: 0;
-  font-size: 500px;
-  line-height: 1;
-  opacity: 0.05;
-  color: var(--strong-red);
-  user-select: none;
 }
 
 .skill {
@@ -354,14 +432,10 @@ h3 {
   color: rgba(255, 255, 255, 0.4);
 }
 
-.skill-image {
-
-  & img {
-    width: 60px;
-  }
+.skill-image img {
+  width: 60px;
 }
 
-/* Contact section */
 .contact {
   background-color: var(--more-light-black);
   display: flex;
@@ -389,6 +463,12 @@ h3 {
   font-size: 24px;
 }
 
+.texto-contato {
+  font-size: 20px;
+  width: 70%;
+  color: hsla(0, 0%, 100%, 0.6);
+}
+
 .social-links {
   display: flex;
   width: 26%;
@@ -396,30 +476,23 @@ h3 {
   align-items: center;
   margin-top: 30px;
   color: white;
-
-  & img {
-    width: 26px;
-  }
-
-  & .email-contact {
-    text-decoration: underline;
-    font-size: 24px;
-    line-height: 1;
-  }
-
-  & a {
-    display: flex;
-    align-items: center;
-  }
 }
 
-.texto-contato {
-  font-size: 20px;
-  width: 70%;
-  color: hsla(0, 0%, 100%, 0.6);
+.social-links img {
+  width: 26px;
 }
 
-/* Footer */
+.social-links .email-contact {
+  text-decoration: underline;
+  font-size: 24px;
+  line-height: 1;
+}
+
+.social-links a {
+  display: flex;
+  align-items: center;
+}
+
 footer {
   background-color: var(--default-black);
   text-align: center;
@@ -428,79 +501,76 @@ footer {
   border-bottom: solid 10px var(--dark-red);
 }
 
-.profile-image img {
-  margin: 0;
-  width: 470px;
-  min-height: 470px;
-  margin-right: 30px;
-  overflow: visible;
+@media (min-width:1024px) and (max-width:1440px) {
+  nav a {
+    font-size: 15px;
+  }
+
+  .subtitulo-maior {
+    font-size: 40px;
+  }
+
+  .subtitulo-menor {
+    font-size: 25px;
+  }
+
+  .sobreTexto {
+    word-wrap: break-word;
+    font-size: 25px;
+    color: hsla(0, 0%, 100%, 0.8);
+  }
 }
 
-.sobreMim {
-  background-color: var(--light-black);
-  min-height: 100vh;
-  max-height: 100vh;
-  max-width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  /* Oculta qualquer coisa que ultrapasse os limites */
-}
+@media (max-width:1024px) {
+  .sobreFotoNome {
+    height: 55%;
+  }
 
-.textFundoSobreMim {
-  font-family: "Bungee Shade", sans-serif;
-  position: absolute;
-  left: -130px;
-  bottom: 50px;
-  z-index: 0;
-  font-size: 400px;
-  line-height: 1;
-  opacity: 0.05;
-  color: var(--strong-red);
-  user-select: none;
-}
+  .sobreFotoNome-fechado {
+    height: 55%;
+  }
 
-.profile-nome {
+  .profile-image img {
+    margin: 0;
+    width: 200px;
+    min-height: 200px;
+    overflow: visible;
+  }
 
-  & p {
-    margin-left: 10px;
+  .profile-nome p {
     color: white;
-    font-size: 35px;
+    font-size: 20px;
     line-height: 1.2;
   }
 
-  & h1 {
+  .profile-nome h1 {
     color: var(--strong-red);
-    font-size: 66px;
+    font-size: 50px;
     font-weight: 800;
     line-height: 1.2;
   }
-}
 
-.sobreFotoNome {
-  flex: 0.7;
-  height: 100%;
-}
+  nav a {
+    font-size: 15px;
+    transition: 0.4s;
+  }
 
-/*Sobre os subtitulos*/
-.subtitulo-maior {
-  font-size: 50px;
-  color: white;
-}
+  header {
+    width: 50%;
+  }
 
-.subtitulo-menor {
-  font-size: 30px;
-  margin: 0;
-  color: hsla(0, 0%, 100%, 0.4);
-}
+  .subtitulo-maior {
+    font-size: 31px;
+    color: white;
+  }
 
-/*Sobre skills e habilidades*/
-.skillsProjects {
-  background-color: var(--default-black);
-  font-family: "Archivo Narrow", sans-serif;
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
+  .subtitulo-menor {
+    font-size: 17px;
+  }
+
+  .sobreTexto {
+    word-wrap: break-word;
+    font-size: 19px;
+    color: hsla(0, 0%, 100%, 0.8);
+  }
 }
