--- a/src/index.css
+++ b/src/index.css
@@ -41,35 +41,32 @@ header {
 }
 
 .scrolled-50px {
-  background-color: hsla(0, 0%, 9%, 0.9);
-  box-shadow: 5px 5px 0px hsla(0, 100%, 14%, 0.8);
-  text-shadow: 0 0 5px hsla(0, 0%, 9%, 0.7);
+  transition: color 0.1s;
+  color: rgba(255, 255, 255, 0.05);
 }
 
-.scrolled-100vh {
-  background-color: hsla(0, 0%, 6%, 0.9);
-  box-shadow: 5px 5px 0px hsla(0, 100%, 14%, 0.8);
+nav ul {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 15px 20px 10px 20px;
+  color: rgba(255, 255, 255, 0.3);
+  transition: background 0.3s, box-shadow 0.8s cubic-bezier(0.2, 1, 0.3, 1), opacity 0.3s ease-out;
 }
 
 nav {
   width: 100%;
 }
-
-nav ul {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  list-style: none;
-  gap: 30px;
-  padding: 20px 20px 10px 20px;
-  transition: background 0.3s, box-shadow 0.8s cubic-bezier(0.2, 1, 0.3, 1), opacity 0.3s ease-out;
-  border-radius: 5px;
-  color: rgba(255, 255, 255, 0.3);
-}
-
 nav a {
   font-size: 20px;
   transition: 0.4s;
+}
+
+nav a:hover{
+  text-shadow: white 0 0  4px;
+  color: white;
 }
 
 nav li {
@@ -123,8 +120,8 @@ h3 {
 
 .sobreMim {
   background-color: var(--light-black);
-  background-image: url('public/images/fundoSobre.jpg');
-  background-size: 100%;
+  background-image: url('/images/fundoSobre.jpg');
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -550,13 +547,16 @@ footer {
     line-height: 1.2;
   }
 
-  nav a {
-    font-size: 15px;
+  nav {
+    & a{
+    font-size: 13px;
     transition: 0.4s;
+    }
   }
 
+
   header {
-    width: 50%;
+    width: 40%;
   }
 
   .subtitulo-maior {
