implementação de animações na home e habilidades por meio da biblioteca Gsap e adição de responsividade para dispositivos móveis pequenos

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Inter', sans-serif;
   transition: background-color 0.3s, color 0.3s;
@@ -59,13 +63,14 @@ nav ul {
 nav {
   width: 100%;
 }
+
 nav a {
   font-size: 20px;
   transition: 0.4s;
 }
 
-nav a:hover{
-  text-shadow: white 0 0  4px;
+nav a:hover {
+  text-shadow: white 0 0 4px;
   color: white;
 }
 
@@ -112,7 +117,7 @@ h3 {
   color: white;
 }
 
-.subtitulo-menor {
+.subtitle {
   font-size: 30px;
   margin: 0 !important;
   color: hsla(0, 0%, 100%, 0.4);
@@ -162,6 +167,8 @@ h3 {
   justify-content: center;
   width: 100%;
   height: 100%;
+  transition: transform 0.5s ease-out;
+  position: relative;
 }
 
 .sobreFotoNome {
@@ -229,22 +236,7 @@ h3 {
   border-left: white solid 3px;
   padding-left: 30px;
   gap: 10px;
-  max-width: 100%;
-  clip-path: inset(0 0 0 0);
-  transition: clip-path 0.3s ease-in-out;
-}
-
-.textoGaveta-fechada {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 30px;
-  gap: 10px;
-  overflow: hidden;
-  clip-path: inset(0 99% 0 0);
-  transition: clip-path 0.4s ease-in-out;
-  border-left: white solid 3px;
-  height: 70%;
+  position: relative;
 }
 
 .sobreTexto {
@@ -276,7 +268,6 @@ h3 {
   height: 80vh;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .projects-assets {
@@ -286,7 +277,7 @@ h3 {
 .projects-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
+  gap: 1fem;
   justify-content: center;
   padding: 20px;
   height: 60vh;
@@ -294,12 +285,15 @@ h3 {
 
 .project-card {
   background-color: var(--more-light-black);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   border-radius: 10px;
   height: 100%;
   overflow: hidden;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s;
-  text-align: center;
   padding: 20px;
   color: white;
 }
@@ -323,7 +317,6 @@ h3 {
   display: flex;
   justify-content: center;
   gap: 10px;
-  padding: 10px;
 }
 
 .principaisTec img {
@@ -342,19 +335,21 @@ h3 {
 }
 
 .skills-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-  gap: 20px;
-  justify-items: center;
-  align-items: center;
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
+  display: flex;
+  gap: 2rem;
+  width: max-content;
+}
+
+.skills-carousel-wrapper {
+  overflow: hidden;
+  width: 100%;
+  min-height: 40%;
+  position: relative;
 }
 
 .divHabilidades {
   width: 70%;
-  height: 30vh;
+  height: 40vh;
   border-left: white solid 3px;
   padding-left: 20px;
   display: flex;
@@ -402,6 +397,7 @@ h3 {
   font-weight: 600;
   color: rgba(255, 255, 255, 0.7);
   height: 100%;
+  opacity: 0;
 }
 
 .divClasseHabilidades div {
@@ -428,7 +424,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background: rgba(255, 255, 255, 0.1);
+  background: var(--light-black);
   padding: 15px;
   border-radius: 10px;
   transition: transform 0.3s ease-in-out, background 0.3s;
@@ -517,7 +513,7 @@ footer {
     font-size: 40px;
   }
 
-  .subtitulo-menor {
+  .subtitle {
     font-size: 25px;
   }
 
@@ -558,9 +554,9 @@ footer {
   }
 
   nav {
-    & a{
-    font-size: 13px;
-    transition: 0.4s;
+    & a {
+      font-size: 13px;
+      transition: 0.4s;
     }
   }
 
@@ -574,7 +570,7 @@ footer {
     color: white;
   }
 
-  .subtitulo-menor {
+  .subtitle {
     font-size: 17px;
   }
 
@@ -583,4 +579,246 @@ footer {
     font-size: 19px;
     color: hsla(0, 0%, 100%, 0.8);
   }
+}
+
+@media (max-width: 480px) {
+
+  .about-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+  }
+
+  .about-section {
+    height: auto;
+  }
+
+  .sobreFotoNome {
+    max-height: 40%;
+  }
+
+  .profile-image img {
+    margin: 0;
+    width: 150px;
+    min-height: 150px;
+    overflow: visible;
+  }
+
+  .profile-nome p {
+    color: white;
+    font-size: 10px;
+    line-height: 1.2;
+  }
+
+  .profile-nome h1 {
+    color: var(--strong-red);
+    font-size: 25px;
+    font-weight: 800;
+    line-height: 1.2;
+  }
+
+  nav {
+    & a {
+      font-size: 10px;
+      transition: 0.4s;
+    }
+  }
+
+
+  header {
+    width: 100%;
+  }
+
+  .textoGaveta {
+    border-top: white solid 3px;
+    border-left: none;
+    padding: 0;
+    padding-top: 40px;
+  }
+
+  .subtitulo-maior {
+    font-size: 21px;
+    color: white;
+  }
+
+  .subtitle {
+    font-size: 14px;
+  }
+
+  .sobreTexto {
+    word-wrap: break-word;
+    font-size: 12px;
+    color: hsla(0, 0%, 100%, 0.8);
+  }
+
+  .divClasseHabilidades img {
+    width: 28px;
+  }
+
+  .divClasseHabilidades .classeHabilidadeImage {
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+  }
+
+  .divClasseHabilidades .frontedLogo {
+    width: 25px;
+  }
+
+  .divClasseHabilidades .fronted, .divClasseHabilidades .backend {
+    background-color: var(--more-light-black);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 43%;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 0.7);
+    height: 70%;
+    opacity: 0;
+
+    & h4 {
+      font-size: 17px;
+    }
+    & p{
+      font-size: 10px;
+    }
+  }
+
+  .divClasseHabilidades{
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .skills-section{
+    width: 100vw;
+  }
+
+  /**/
+  .divHabilidades{
+    width: 95%;
+    height: 30vh;
+  }
+  
+.skill {
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.skill-name {
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 10px;
+}
+
+.skill-image img {
+  width: 30px;
+}
+
+.skills-container {
+  gap: 1rem;
+}
+/**/
+
+.projects-section {
+  height: 150vh;
+}
+
+.projects-assets {
+  width: 90%;
+}
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 10px;
+  justify-content: center;
+  align-items: start;
+  height: 95%;
+}
+
+.project-card {
+  width: 100%;
+  max-width: 350px;
+  border-radius: 10px;
+  height: 100%;
+  max-height: 350px;
+  transition: transform 0.3s;
+  padding: 20px;
+  margin: 0 auto;
+}
+
+
+.project-card p {
+  font-size: 10px;
+}
+
+.project-card h3{
+  font-size: 15px;
+  padding: 0;
+}
+
+.project-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.principaisTec {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.principaisTec img {
+  width: 15px;
+  height: 15px;
+}
+
+/**/
+
+.contact {
+  background-color: var(--more-light-black);
+  display: flex;
+  justify-content: center;
+  height: 40vh;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  width: 80%;
+}
+
+.texto-contato{
+  font-size: 10px;
+  width: 100%;
+}
+
+.social-links {
+  display: flex;
+  width: 26%;
+  gap: 8px;
+  color: white;
+}
+
+.social-links img {
+  width: 10px;
+}
+
+.social-links .email-contact {
+  text-decoration: underline;
+  font-size: 10px;
+  line-height: 1;
+}
+
+footer p{
+  font-size: 10px;
+}
+
 }
