--- a/src/index.css
+++ b/src/index.css
@@ -584,6 +584,7 @@ footer {
 
   .sobreMim {
     background-size: contain;
+    background-repeat: repeat;
     overflow: hidden;
   }
 
@@ -601,7 +602,6 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    overflow: hidden;
   }
 
   .barraMobile {
